// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Camfil Header Default Component should render normal header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <ul class="user-links">
    <li class="dropdown">Webshop</li>
    <li>Customer support</li>
    <li>Filter guide</li>
    <li>Top link 3</li>
    <li>Top link 4</li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler"></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-login-status data-testing-id="user-status-desktop"></ish-login-status>
    </div>
    <camfil-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
      ng-reflect-ng-class="d-md-none"
      ng-reflect-view="small"
    ></camfil-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="logo"
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
          ng-reflect-router-link="/home"
          href="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-1 text-right">
      <camfil-lazy-header-quickorder></camfil-lazy-header-quickorder>
    </div>
    <div class="col-md-5">
      <div class="search-container">
        <camfil-search-box data-testing-id="search-box-desktop"></camfil-search-box>
      </div>
    </div>
    <div class="col-md-1">
      <camfil-product-compare-status
        data-testing-id="compare-status-desktop"
      ></camfil-product-compare-status>
    </div>
    <div class="col-md-2">
      <camfil-mini-basket
        class="d-none d-md-block"
        data-testing-id="mini-basket-desktop"
        view="full"
        ng-reflect-ng-class="d-md-block"
        ng-reflect-view="full"
      ></camfil-mini-basket>
    </div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render normal header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <ul class="user-links">
    <li class="dropdown">Webshop</li>
    <li>Customer support</li>
    <li>Filter guide</li>
    <li>Top link 3</li>
    <li>Top link 4</li>
  </ul>
  <div class="header-utility">
    <a class="search-toggler"></a>
    <div class="language-switch-container d-none d-md-block">
      <ish-login-status data-testing-id="user-status-desktop"></ish-login-status>
    </div>
    <camfil-mini-basket
      data-testing-id="mini-basket-mobile"
      view="small"
      class="d-md-none"
      ng-reflect-ng-class="d-md-none"
      ng-reflect-view="small"
    ></camfil-mini-basket>
  </div>
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="logo"
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
          ng-reflect-router-link="/home"
          href="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-1 text-right">
      <camfil-lazy-header-quickorder></camfil-lazy-header-quickorder>
    </div>
    <div class="col-md-5">
      <div class="search-container">
        <camfil-search-box data-testing-id="search-box-desktop"></camfil-search-box>
      </div>
    </div>
    <div class="col-md-1">
      <camfil-product-compare-status
        data-testing-id="compare-status-desktop"
      ></camfil-product-compare-status>
    </div>
    <div class="col-md-2">
      <camfil-mini-basket
        class="d-none d-md-block"
        data-testing-id="mini-basket-desktop"
        view="full"
        ng-reflect-ng-class="d-md-block"
        ng-reflect-view="full"
      ></camfil-mini-basket>
    </div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render sticky header adequately for desktop 1`] = `
<div class="header container desktop" ng-reflect-ng-class="desktop">
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="logo"
          data-testing-id="header-home-link-desktop"
          rel="home"
          routerlink="/home"
          ng-reflect-router-link="/home"
          href="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-1 text-right">
      <camfil-lazy-header-quickorder></camfil-lazy-header-quickorder>
    </div>
    <div class="col-md-5"></div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu open"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="false">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render sticky header adequately for mobile devices 1`] = `
<div class="header container mobile" ng-reflect-ng-class="mobile">
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="mobile-logo"
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
          ng-reflect-router-link="/home"
          href="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-1 text-right">
      <camfil-lazy-header-quickorder></camfil-lazy-header-quickorder>
    </div>
    <div class="col-md-5"></div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="true">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;

exports[`Camfil Header Default Component should render sticky header adequately for tablet devices 1`] = `
<div class="header container tablet" ng-reflect-ng-class="tablet">
  <div class="row align-items-center">
    <div class="col-md-3 logo-col">
      <div class="logo-wrapper">
        <a
          class="mobile-logo"
          data-testing-id="header-home-link-mobile"
          rel="home"
          routerlink="/home"
          ng-reflect-router-link="/home"
          href="/home"
        ></a>
      </div>
    </div>
    <div class="col-md-1 text-right">
      <camfil-lazy-header-quickorder></camfil-lazy-header-quickorder>
    </div>
    <div class="col-md-5"></div>
  </div>
  <button class="navbar-toggler" type="button">
    <span class="sr-only">common.button.navbarCollapsed.text</span>
    <div class="hamburger-menu"><span></span><span></span><span></span></div>
  </button>
  <div class="global-nav-container">
    <nav class="global-nav navbar-expand-md" ng-reflect-collapsed="true">
      <div class="main-navigation" role="navigation">
        <ish-header-navigation></ish-header-navigation
        ><ish-user-information-mobile></ish-user-information-mobile>
      </div>
    </nav>
  </div>
</div>
`;
